--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -119,6 +119,28 @@
                     .first()
                     .addClass('is-first-visible');
             });
+
+            $('.no-schedule-message').remove();
+
+            const hasVisibleItem =
+                $('#schedule [class^="schedule_"]:visible').length > 0 ||
+                ($('#schedule-past').is(':visible') &&
+                    $('#schedule-past [class^="schedule_"]:visible').length > 0);
+
+            if (!hasVisibleItem) {
+                $('#schedule').prepend(`
+            <div class="no-schedule-message" style="padding: 24px; text-align: center; opacity: 0.7;">
+                <svg role="img" aria-label="リボン">
+                    <use href="#butterfly"></use>
+                </svg>
+                該当の予定はありません
+                <svg role="img" aria-label="リボン">
+                    <use href="#butterfly"></use>
+                </svg>
+            </div>
+        `);
+            }
+
         }
         // 動的にコンテンツを追加した後もフィルターを再適用する場合に呼び出す
         function refreshFilter() {
