--- a/pages/phanart/sanketsu.html
+++ b/pages/phanart/sanketsu.html
@@ -25,6 +25,22 @@
 
 <div class="contents_block">
     <div class="popupimg-wrapper protected-img-wrapper">
+        <img src="/static/img/phanart/sanketsu/20250917_mona-birthday.webp" alt="" loading="lazy"
+            class="popupimg-popup-img protected-img"
+            style="object-position: 50% 50%; /* 左,上 */ max-height: 80vh; margin: 0 auto;">
+        <a class="phanart-popup-orig-link" href="https://x.com/F7F2030/status/1923935757720486362"></a>
+    </div>
+
+    <div class="contents_block contents_block_has_a" style="margin: 10px 0 0 0;">
+        <a class="contents_block_a" href="/static/img/phanart/sanketsu/20250917_mona-birthday.png"></a>
+        <h3>オリジナル画質はこちら</h3>
+        <p>細かいところまでのこだわりがとても素敵なので、オリジナルの高画質でぜひご覧ください！</p>
+        <p style="font-size: small;">※45MB程度のファイルサイズがあるため、読み込みに時間がかかることがあります。</p>
+    </div>
+</div>
+
+<div class="contents_block">
+    <div class="popupimg-wrapper protected-img-wrapper">
         <img src="/static/img/phanart/sanketsu/014.jpg" alt="" loading="lazy" class="popupimg-popup-img protected-img"
             style="object-position: 50% 50%; /* 左,上 */">
         <a class="phanart-popup-orig-link" href="https://x.com/F7F2030/status/1923935757720486362"></a>
