move mona-birthday.png to LF

--- a/pages/phanart/sanketsu.html
+++ b/pages/phanart/sanketsu.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="contents_block contents_block_has_a" style="margin: 10px 0 0 0;">
-        <a class="contents_block_a" href="/static/img/phanart/sanketsu/20250917_mona-birthday.png"></a>
+        <a class="contents_block_a" href="https://lf.mothlamp.info/phanart/sanketsu/20250917_mona-birthday.png"></a>
         <h3>オリジナル画質はこちら</h3>
         <p>細かいところまでのこだわりがとても素敵なので、オリジナルの高画質でぜひご覧ください！</p>
         <p style="font-size: small;">※45MB程度のファイルサイズがあるため、読み込みに時間がかかることがあります。</p>
